# Console_battle

./: CMakeLists.txt  Console_draw.cpp  Console_draw.h  Dice.cpp  Dice.h  GLogic.cpp  GLogic.h  Game_Creature.cpp  Game_Creature.h  INOUT.cpp  INOUT.h  Monster.cpp  Monster.h  PLAN.docx  PLayer.cpp  PLayer.h  Player.cpp  Player.h  README.md  UI.cpp  UI.h  console.txt  dragon.cpp  dragon.h  help_classes.cpp  help_classes.h  list_of_strings.cpp  list_of_strings.h  main.cpp  monster.cpp  monster.h  random.cpp  troll.cpp  troll.h  types_of_DATABOX.txt  warrior.cpp  warrior.h  wizard.cpp  wizard.h
